-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b137
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8214626 | 8u211 | David Buck | P1 | Resolved | Fixed | b01 |
| JDK-8181822 | 8u202 | David Buck | P2 | Closed | Fixed | b02 |
| JDK-8220879 | emb-8u211 | David Buck | P1 | Resolved | Fixed | master |
# Internal Error (/Users/vlivanov/ws/jdk/hs-comp9/hotspot/src/share/vm/opto/compile.cpp:1712), pid=61943, tid=22531
# assert(flat != TypePtr::BOTTOM) failed: cannot alias-analyze an untyped ptr
ILW = MLH = P4
I = M: assert
L = L: observed only with modified JVM
W = H: no workaround
- backported by
-
JDK-8214626 C2: Mixed unsafe oop accesses break alias analysis
-
- Resolved
-
-
JDK-8220879 C2: Mixed unsafe oop accesses break alias analysis
-
- Resolved
-
-
JDK-8181822 C2: Mixed unsafe oop accesses break alias analysis
-
- Closed
-
- duplicates
-
JDK-8164121 assert(flat != TypePtr::BOTTOM) failed: cannot alias-analyze an untyped ptr
-
- Closed
-
-
JDK-8056058 C2 assert: assert(flat != TypePtr::BOTTOM) failed: cannot alias-analyze an untyped ptr when running SPECjbb2013
-
- Closed
-
- relates to
-
JDK-8221355 Performance regression after JDK-8155635 backport into 8u
-
- Resolved
-
-
JDK-8056058 C2 assert: assert(flat != TypePtr::BOTTOM) failed: cannot alias-analyze an untyped ptr when running SPECjbb2013
-
- Closed
-