8155635: C2: Mixed unsafe accesses break alias analysis

Reviewed-by: jrose, kvn